@@ -447,3 +447,6 @@
 2016-05-11 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 5:1:2.
 	* Incremented the package version to 0.11.5.
+2016-12-07 Fred Gleason <fredg@paravelsystems.com>
+	* Added support for a 'SWITCHYARD_SUPPRESS_DEBUG' environmental
+	variable.
